--- a/cv/index.html
+++ b/cv/index.html
@@ -118,7 +118,7 @@
     <h1 id="working-experience">Working Experience</h1>
 <ul>
 <li>
-<p><strong>NoMachine</strong>  Tbilisi, Georgia</p>
+<p style="margin-bottom: 2px;"><strong>NoMachine</strong> / Tbilisi, Georgia</p>
 <ul>
 <li>C/C++ Developer: July 2014 - October 2018
 <ul>
@@ -130,7 +130,7 @@
 </ul>
 </li>
 <li>
-<p><strong>Bolt</strong></p>
+<p style="margin-bottom: 2px;"><strong>Bolt</strong> / Tallinn, Estonia</p>
 <ul>
 <li>Software Engineer: October 2018 - August 2020
 <ul>
