Added game link

--- a/projects/index.html
+++ b/projects/index.html
@@ -116,7 +116,7 @@
 <p>KATU is a tool that I developed for my Master&rsquo;s Thesis in TU Kaiserslautern. It detects unbounded memory accesses in applications. To achieve it, the tool keeps track of memory regions that contain data that an app has read from somewhere (this is called a tainted data). It also keeps track of boundary checks that got applied to that data. By having this information, the tool can detect if a memory address that depends on an unbounded tainted data gets accessed. It&rsquo;s coded in C language and uses <a href="https://dynamorio.org/">DynamoRIO</a> Platform.</p>
 <h1 id="drawgame">Drawgame</h1>
 <ul>
-<li>TODO: Add live game link here.</li>
+<li><a href="http://drawgame-env.eba-qwamtbnf.us-east-1.elasticbeanstalk.com">Game link</a></li>
 <li><a href="https://github.com/jbaramidze/drawgame-back">Source code BE</a></li>
 <li><a href="https://github.com/jbaramidze/drawgame-front">Source code FE</a></li>
 </ul>
